--- a/2025-01-28.Rmd
+++ b/2025-01-28.Rmd
@@ -9,8 +9,20 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r}
+library(tidyverse)
+```
+
 
 ```{r}
 
+f <- "/Users/jeh5663/Documents/ADA-2025-Notes/Country-Data-2016.csv"
+d <- read_csv(f, col_name=TRUE)
+median(d$population, na.rm=TRUE)
+median(d$area, na.rm=TRUE)
+
+d$density <- d$population / d$area
+
+dns <- d$population / d$area
+d <- mutate(d, density = dns)
 ```
