--- a/2025-02-04.qmd
+++ b/2025-02-04.qmd
@@ -66,5 +66,5 @@ df <- read_csv(file, col_names = TRUE)
 text
 
 ```{r}
-mutate(d, Comedy = ifelse())
+df <- df |> mutate(Comedy = if_else(grepl("Comedy", genres), TRUE, FALSE))
 ```
