--- a/2025-02-04.qmd
+++ b/2025-02-04.qmd
@@ -63,8 +63,14 @@ file <- "https://raw.githubusercontent.com/difiore/ada-datasets/refs/heads/main/
 df <- read_csv(file, col_names = TRUE)
 ```
 
-text
+Create 'comedy' variable
 
 ```{r}
 df <- df |> mutate(Comedy = if_else(grepl("Comedy", genres, ignore.case = TRUE), TRUE, FALSE))
+```
+
+Count total movies and all comedy movies
+
+```{r}
+df |> summarise(n(), sum(Comedy))
 ```
