--- a/2025-02-11.qmd
+++ b/2025-02-11.qmd
@@ -7,16 +7,79 @@ editor: visual
 
 ## Notes
 
-### Text
+### Load packages and data
 
 ```{r}
+library(tidyverse)
+f1 <- "https://raw.githubusercontent.com/difiore/ada-datasets/refs/heads/main/papers.csv"
+f2 <- "https://raw.githubusercontent.com/difiore/ada-datasets/refs/heads/main/creators.csv"
 
+p <- read_csv(f1, col_names = TRUE)
+c <- read_csv(f2, col_names = TRUE)
 ```
 
-### Text
+### Wrangle data
 
 ```{r}
+p <- p |> 
+  separate_wider_delim(cols = Author,
+                       delim = ";",
+                       names = c("First Author", "A2", "A3", "A4"),
+                       too_few = "align_start", 
+                       too_many = "drop") |>
+  mutate(A2 = str_trim(A2, "both"),
+         A3 = str_trim(A3, "both"),
+         A4 = str_trim(A4, "both"))
 
+c <- c |> distinct()
+```
+
+### Joins
+
+```{r}
+inner1 <- inner_join(c, p, by = c("fullName" = "First Author"))
+inner2 <- inner_join(p, c, by = c("First Author" = "fullName"))
+
+left <- left_join(c, p, by = c("fullName" = "First Author"))
+right <- right_join(p, c, by = c("First Author" = "fullName"))
+
+find_pubs <- tibble(fullName = c("Abbott, David H"))
+```
+
+### Fuzzy Joins
+
+```{r}
+library(fuzzyjoin)
+
+find_pubs <- tibble(partialName = c("^Abbott"))
+inner_fuzzy <- regex_inner_join(p, find_pubs, by = c("First Author" = "partialName"))
+```
+
+```{r}
+find_pubs <- tibble(partialName = c("^Wil", "ony$"))
+inner_fuzzy2 <- regex_inner_join(p, find_pubs, by = c("First Author" = "partialName"))
+
+find_pubs <- tibble(partialName = c("^Jha"))
+inner_fuzzy3 <- regex_inner_join(p, find_pubs, by = c("First Author" = "partialName"))
+```
+
+### toy function
+
+```{r}
+my_filter <- function(x, condition, variable){
+library(tidyverse)
+x <- x |> filter(value %in% condition)
+return(x)
+}
+```
+
+### Using the toy function
+
+```{r}
+df <- data.frame(rowid = 1:5, value = c("a","b", "c", "d", "e"))
+my_filter(df, condition = c("c", "e"), variable = "value")
+new_df <- my_filter(df, condition = c("a", "b", "e"))
+new_df
 ```
 
 ### Text
