--- a/2025-02-18.qmd
+++ b/2025-02-18.qmd
@@ -67,3 +67,27 @@ histogram(samp_dist_median$median)
 ```{r}
 
 ```
+
+## title
+
+```{r}
+
+```
+
+## title
+
+```{r}
+
+```
+
+## title
+
+```{r}
+
+```
+
+## title
+
+```{r}
+
+```
