--- a/2025-02-18.qmd
+++ b/2025-02-18.qmd
@@ -66,7 +66,11 @@ print(paste("The standard deviation is", sd))
 print(paste("The standard error is", se))
 ```
 
-## title
+## Confidence interval
+
+Interval around our estimate of the mean of the sampling distribution for a particular statistic (typically the mean).
+
+95% confidence interval = 95% chance statistic of a re-sample falls within the interval.
 
 ```{r}
 
