--- a/2025-02-20.qmd
+++ b/2025-02-20.qmd
@@ -14,3 +14,43 @@ text
 ```{r}
 
 ```
+
+## Running Code
+
+text
+
+```{r}
+
+```
+
+## Running Code
+
+text
+
+```{r}
+
+```
+
+## Running Code
+
+text
+
+```{r}
+
+```
+
+## Running Code
+
+text
+
+```{r}
+
+```
+
+## Running Code
+
+text
+
+```{r}
+
+```
