--- a/2025-03-04.qmd
+++ b/2025-03-04.qmd
@@ -94,19 +94,32 @@ correlation
 cor(d$height, d$weight)
 ```
 
-## Text
+## Center variables
 
 ```{r}
+d <- mutate(d, centered_height = height - mean(height))
+d <- mutate(d, centered_weight = weight - mean(weight))
 ```
 
-## Text
+## Slope test function
 
 ```{r}
+slope.test <- function(beta1, data) {
+    g <- ggplot(data = data, aes(x = centered_weight, y = centered_height))
+    g <- g + geom_point()
+    g <- g + geom_abline(intercept = 0, slope = beta1, size = 1, colour = "blue",
+        alpha = 1/2)
+    ols <- sum((data$centered_height - beta1 * data$centered_weight)^2)
+    g <- g + ggtitle(paste("Slope = ", beta1, "\nSum of Squared Deviations = ", round(ols,
+        3)))
+    g
+}
 ```
 
-## Text
+## Manipulate
 
 ```{r}
+manipulate(slope.test(beta1, data = d), beta1 = slider(-1, 1, initial = 0, step = 0.005))
 ```
 
 ## Text
