--- a/2025-03-04.qmd
+++ b/2025-03-04.qmd
@@ -126,5 +126,12 @@ manipulate(slope.test(beta1, data = d), beta1 = slider(-1, 1, initial = 0, step 
 
 ```{r}
 print(beta1 <- cov(d$height, d$weight) / var(d$weight))
-print(beta0 <- mean(d$height) + beta1*mean(d$weight))
+print(beta0 <- mean(d$height) - beta1*mean(d$weight))
+```
+
+## Linear model
+
+```{r}
+m <- lm(height~weight, data=d)
+summary(m)
 ```
